--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
 .DS_Store
 .env
+/ .env.*
 /node_modules/
 /legacy/
 /.github/
 /.specify/
 /.vscode/
+
+# Logs
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build outputs
+/dist/
+/coverage/
 
 # React Router
 /.react-router/
