--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "analyze": "vite-bundle-visualizer"
   },
   "dependencies": {
     "@react-router/node": "7.12.0",
@@ -15,17 +18,26 @@
     "lucide-react": "^0.546.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hook-form": "^7.51.0",
     "react-router": "7.12.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@react-router/dev": "7.12.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "eslint": "^9.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.0.0",
+    "prettier": "^3.2.5",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^7.0.0",
     "vite": "^7.1.7",
+    "vite-bundle-visualizer": "^1.2.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
