--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "framer-motion": "^12.26.1",
     "isbot": "^5.1.31",
     "lucide-react": "^0.546.0",
     "react": "^19.2.3",
