--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.51.0",
-    "react-router": "7.12.0"
+    "react-router": "7.12.0",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
