--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
+firebase.json
+.firebaserc
 # Build outputs
 /dist/
 /coverage/
