--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "@sanity/vision": "^5.7.0",
     "framer-motion": "^12.26.1",
     "isbot": "^5.1.31",
     "lucide-react": "^0.546.0",
@@ -21,6 +22,8 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.51.0",
     "react-router": "7.12.0",
+    "sanity": "^5.7.0",
+    "styled-components": "^6.1.18",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
