--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "@portabletext/react": "^3.2.1",
+    "@sanity/client": "^6.15.10",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^5.7.0",
     "framer-motion": "^12.26.1",
+    "groq": "^3.66.0",
     "isbot": "^5.1.31",
     "lucide-react": "^0.546.0",
     "react": "^19.2.3",
