--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "analyze": "vite-bundle-visualizer"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
-    "@portabletext/react": "^3.2.1",
     "@sanity/client": "^6.15.10",
+    "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^5.7.0",
     "framer-motion": "^12.26.1",
