--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,12 @@
 {
   "outputDirectory": "build/client",
-  "buildCommand": "pnpm run build"
+  "buildCommand": "pnpm run build",
+  "env": {
+    "NODE_ENV": "production"
+  },
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
