--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
   "outputDirectory": "build/client",
   "buildCommand": "pnpm run build",
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "installCommand": "pnpm install"
 }
