--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.0.0",
     "prettier": "^3.2.5",
+    "sharp": "^0.34.5",
+    "svgo": "^4.0.0",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "typescript-eslint": "^7.0.0",
     "vite": "^7.1.7",
     "vite-bundle-visualizer": "^1.2.1",
+    "vite-plugin-image-optimizer": "^2.0.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
